package NYT.NHiveClient.NProto;

option go_package = "a.yandex-team.ru/yt/go/proto/client/hive";

////////////////////////////////////////////////////////////////////////////////

message TTimestampMap
{
    repeated int32 cell_tags = 1;
    repeated uint64 timestamps = 2;
}

////////////////////////////////////////////////////////////////////////////////
